Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-12 (SVN):
    * gl_draw.c, gl_rmisc.c, gl_vidnt.c,gl_vidsdl.c: Revised the default
      texture filter mode settings by feeding specific preferences to
      GL_LoadTexture and not explicitly setting the MAG_ and MIN_FILTER
      unless necessary. The console and menu fonts as well as the status
      bar text have much better readability now when the 2D elements are
      scaled up by either using the menu option or the -conwidth command
      line switch.

2012-02-12 (SVN):
    * d_polyse.c: Fixed the long-standing bug of EF_SPECIAL_TRANS models
      being drawn with incorrect transparency when compiled without the
      x86 assembler routines: D_PolysetDrawSpans8T5() shouldn't refer to
      acolormap, fixed thusly.

2012-02-12 (SVN):
    * windows mouse: Disabled windows gdi mouse acceleration for better
      operation on winxp and newer. players can change their sensitivity
      setting if necessary.

2012-02-12 (SVN):
    * windows mouse: Made in_win.c:dinput_init variable public. Removed
      the IN_RestoreMouse helper and added explicit dinput_init checks
      in gl_vidnt.c, vid_win.c and vid_mgl4.c with additional comments.

2012-02-11 (SVN):
    * screen.c, gl_screen.c: Revert parts of rev.4530 which changed the
      loading plaque drawing and the scr_drawloading global, because of
      an unexpected weirdness with ATI linux open source drivers. Minor
      tidying up.

2012-02-11 (SVN):
    * revert previous r.4531, block unnecessary redraws of the progress
      bars earlier in D_ShowLoadingSize().
    * screen.c, gl_screen.c: only draw the progress bars when they have
      changed.

2012-02-11 (SVN):
    * screen.c, gl_screen.c: Tweaked SCR_DrawLoading to draw the loading
      plaque only when necessary, i.e. once only after SCR_UpdateScreen
      is called. Changed scr_drawloading from a boolean to int, so that